fix: box too big on desktop

--- a/style.css
+++ b/style.css
@@ -250,7 +250,6 @@ nav {
     }
 
     & header {
-
         &::before{
             animation: slide-in-left 0.9s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
         }
@@ -786,6 +785,8 @@ nav {
         text-align: left;
         margin: 0 8rem;
         grid-area: content / tech-nav / content / content;
+
+        max-width: 80ch;
     }
 
 }
